--- a/Exercícios/Site 01/Henri.css
+++ b/Exercícios/Site 01/Henri.css
@@ -14,7 +14,6 @@
 body{
   max-width: 1550px;
   width: auto;
-  height: auto;
   margin: auto;
 }
 
@@ -80,7 +79,7 @@ article p {
 }
 
 footer{
-  position: absolute;
+  position: relative;
   background-color: rgba(0, 0, 0, 0.14);
   text-align: center;
   
