--- a/Exercícios/Site 01/Henri.css
+++ b/Exercícios/Site 01/Henri.css
@@ -79,7 +79,8 @@ article p {
 }
 
 footer{
-  position: relative;
+  width: auto;
+  margin: auto;
   background-color: rgba(0, 0, 0, 0.14);
   text-align: center;
   
