--- a/Exercícios/Site 01/Henri.css
+++ b/Exercícios/Site 01/Henri.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 *{
- width: auto;
+ 
  padding: 0px;
  margin: 0px;
  
@@ -21,7 +21,7 @@ body{
 header{
   
   width: auto;
-  height: 50px ; 
+  height: auto; 
   padding: 10px ;
   font-size: 20px ;
   font-family: "UnfinishedScreamRegular";
@@ -31,6 +31,7 @@ header{
 }
 
 nav{
+   margin: auto;
    background-color: rgba(0, 0, 0, 0.14); ;
 }
 
@@ -56,7 +57,7 @@ nav{
 
 main{
   width: auto;
-  height: 800px;
+  height: auto;
   margin: auto;
   border-style: solid ;
   border-width: 1px;
