--- a/Exercícios/Site 01/Henri.css
+++ b/Exercícios/Site 01/Henri.css
@@ -13,6 +13,7 @@
 
 body{
   max-width: 1550px;
+  height: 1000px;
   width: auto;
   margin: auto;
 }
@@ -57,7 +58,7 @@ nav{
 
 main{
   width: auto;
-  height: auto;
+  height: 800px;
   margin: auto;
   border-style: solid ;
   border-width: 1px;
@@ -80,8 +81,7 @@ article p {
 }
 
 footer{
-  width: auto;
-  margin: auto;
+  position: relative;
   background-color: rgba(0, 0, 0, 0.14);
   text-align: center;
   
