--- a/Exercícios/Site 01/Henri.css
+++ b/Exercícios/Site 01/Henri.css
@@ -22,7 +22,8 @@ body{
 header{
   
   width: auto;
-  height: auto; 
+  height: auto;
+  min-height: 70px;
   padding: 10px ;
   font-size: 20px ;
   font-family: "UnfinishedScreamRegular";
@@ -43,6 +44,7 @@ nav{
   text-decoration:none ;
   color: #ffffff;
   box-shadow: 2px 5px 2px #5454543e;
+
 }
 
 .link:hover{
@@ -54,16 +56,13 @@ nav{
 
 
 
-
-
 main{
   width: auto;
-  height: 800px;
+  height: 900px;
   margin: auto;
   border-style: solid ;
   border-width: 1px;
   border-color: rgba(0, 0, 0, 0.188);
-  min-width: 300px;
   max-width: 600px;
 }
 
