--- a/Exercícios/Site 01/Henri.css
+++ b/Exercícios/Site 01/Henri.css
@@ -33,33 +33,37 @@ header{
 }
 
 nav{
-   margin: auto;
-   background-color: rgba(0, 0, 0, 0.14); ;
+  
+  background-color:rgba(0, 0, 0, 0.14); 
 }
 
-.link{
-  position: relative;
-  left: 30px;
-  padding: 0px 15px 0px 15px;
-  text-decoration:none ;
-  color: #ffffff;
-  box-shadow: 2px 5px 2px #5454543e;
+ul{
+  padding-left: 1300px;
+  display: inline-flex;
+  list-style: none;
 
-}
-
-.link:hover{
-  transition-duration: 2s;
-  background-color: #000;
   
 }
+a{
+ padding: 5px 15px;
+ text-decoration: none;
+
+ color: black;
+ box-shadow: 5px 5px 5px #0000;
+}
+
+
+
+
 
 
 
 
 main{
   width: auto;
-  height: 900px;
+  height: auto;
   margin: auto;
+  min-width: 800px;
   border-style: solid ;
   border-width: 1px;
   border-color: rgba(0, 0, 0, 0.188);
@@ -72,6 +76,7 @@ article{
   line-height: 25px;
   text-indent: 0px;
   text-align:center ;
+  max-width: 300px;
   padding: 15px;
 }
 article p {
