--- a/Exercícios/Site 01/Henri.css
+++ b/Exercícios/Site 01/Henri.css
@@ -64,10 +64,10 @@ main{
   height: auto;
   margin: auto;
   min-width: 800px;
-  border-style: solid ;
-  border-width: 1px;
-  border-color: rgba(0, 0, 0, 0.188);
-  max-width: 600px;
+  border-style: solid;
+  border-color: rgba(120, 116, 116, 0.104);
+  border-width: 2px;
+  min-width: 400px;
 }
 
 article{
@@ -76,15 +76,19 @@ article{
   line-height: 25px;
   text-indent: 0px;
   text-align:center ;
-  max-width: 300px;
+  width: auto;
+  max-width: 350px;
   padding: 15px;
 }
 article p {
- padding: 10px;
+padding-top: 15px;
+
 
 }
 
+
 footer{
+
   position: relative;
   background-color: rgba(0, 0, 0, 0.14);
   text-align: center;
