--- a/Exercícios/poesia/poeta.css
+++ b/Exercícios/poesia/poeta.css
@@ -1,1 +1,66 @@
 @charset "utf-8";
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html,
+body {
+    min-width: 100vh;
+    background-color: darkgrey;
+}
+
+header {
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+}
+
+header h1 {
+    padding-top: 50px;
+    font-variant: small-caps;
+
+}
+
+header p {
+    padding-bottom: 50px;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+section {
+
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}  
+
+section.normal {
+    background-color: #fff;
+    color: #000;
+}
+
+section.imagem {
+    background-color: #333232;
+    color: #fff;
+}
+
+section.imagem > p{
+    width: 400px;
+    background-color: #1d1d1d;
+}
+
+footer {
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+}
