--- a/Exercícios/poesia/poeta.css
+++ b/Exercícios/poesia/poeta.css
@@ -1,25 +1,52 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+ 
+
+
+:root {
+    --fonte1: Verdana, Geneva, tahoma, sans-serif;
+    --fonte2: 'Passion One', sans-serif;
+    --fonte3:  'Sriracha', sans-serif;
+     
+
+}
+
+
+
 * {
+    width: auto;
     margin: 0px;
     padding: 0px;
 }
 
-html,
-body {
-    min-width: 100vh;
+html,body {
+    
     background-color: darkgrey;
+    font-family: var(--fonte1);
+  
+
 }
 
 header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #000;
     color: #fff;
-    text-align: center;
+  
+   
 }
 
 header h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 50px;
+    font-family: var(--fonte2);
+ 
+  
 
 }
 
@@ -42,6 +69,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 20px;
 }  
 
 section.normal {
@@ -55,7 +84,8 @@ section.imagem {
 }
 
 section.imagem > p{
-    width: 400px;
+    display: inline-block;
+    padding: 10px;
     background-color: #1d1d1d;
 }
 
