--- a/Exercícios/poesia/poeta.css
+++ b/Exercícios/poesia/poeta.css
@@ -3,14 +3,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
- 
+
+
+
 
 
 :root {
     --fonte1: Verdana, Geneva, tahoma, sans-serif;
     --fonte2: 'Passion One', sans-serif;
-    --fonte3:  'Sriracha', sans-serif;
-     
+    --fonte3: 'Sriracha', sans-serif;
+
 
 }
 
@@ -22,13 +24,16 @@
     padding: 0px;
 }
 
-html,body {
-    
+html,
+body {
+
     background-color: darkgrey;
     font-family: var(--fonte1);
-  
+
 
 }
+
+
 
 header {
     display: flex;
@@ -36,17 +41,19 @@ header {
     align-items: center;
     background-color: #000;
     color: #fff;
-  
-   
+
+
 }
+
+
 
 header h1 {
     padding-top: 50px;
     font-variant: small-caps;
     font-size: 50px;
     font-family: var(--fonte2);
- 
-  
+
+
 
 }
 
@@ -54,40 +61,85 @@ header p {
     padding-bottom: 50px;
 }
 
+
+
 a {
     text-decoration: none;
     color: #fff;
 }
 
+
+
+
 a:hover {
     text-decoration: underline;
 }
 
+
+
+
 section {
 
-    padding-top: 10vh;
+    padding-top: 5vh;
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
     font-size: 20px;
-}  
+}
+
+
+
+section p {
+    padding-bottom: 1em;
+}
+
+
+
+
 
 section.normal {
     background-color: #fff;
     color: #000;
 }
 
+
+
+
 section.imagem {
     background-color: #333232;
     color: #fff;
 }
 
-section.imagem > p{
+
+
+
+section.imagem>p {
     display: inline-block;
     padding: 10px;
-    background-color: #1d1d1d;
+    background-color: #1d1d1d2f;
 }
+
+
+
+
+section#img1 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+
+}
+
+
+
+section#img2 {
+   background-image: url(imagens/background002.jpg);
+   background-position: right center;
+   background-size: cover;
+
+}
+
+
 
 footer {
     background-color: #000;
